`thread` 현재 구현 분석 추가
Took 2 hours 37 minutes

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -6,6 +6,123 @@ Team Number: 20
 
 김치헌(20190807)
 
+## Table of Contents
+- [Project 1: Threads](#project-1--threads)
+  * [Preliminaries](#preliminaries)
+- [Analysis of the current implementation](#analysis-of-the-current-implementation)
+  * [Threads](#threads)
+    + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
+    + [Thread State](#thread-state)
+      - [Ready List](#ready-list)
+  * [Scheduling](#scheduling)
+  * [Syncronization Primitives](#syncronization-primitives)
+    + [Lock](#lock)
+    + [Semaphore](#semaphore)
+    + [Condition Variable](#condition-variable)
+    + [Optimization barrier](#optimization-barrier)
+- [Requirements](#requirements)
+  * [Alarm Clock](#alarm-clock)
+    + [Overall structure](#overall-structure)
+    + [Data Structures](#data-structures)
+    + [Algorithms](#algorithms)
+    + [Implementation](#implementation)
+    + [Rationale](#rationale)
+  * [Priority Scheduling](#priority-scheduling)
+    + [Overall structure](#overall-structure-1)
+    + [Data Structures](#data-structures-1)
+    + [Algorithms](#algorithms-1)
+    + [Implementation](#implementation-1)
+    + [Rationale](#rationale-1)
+  * [Advanced Scheduler](#advanced-scheduler)
+    + [Overall structure](#overall-structure-2)
+    + [Data Structures](#data-structures-2)
+    + [Algorithms](#algorithms-2)
+    + [Implementation](#implementation-2)
+    + [Rationale](#rationale-2)
+    
+
+
+
+
+# Analysis of the current implementation
+## Threads
+### Overview of Thread life cycle implementation in PintOS
+A current implementation of threads in pintos starts at `main()` in `src/threads/init.c`. 
+```c
+int main(void){
+  /* initizliation */
+  thread_init();
+  /* Init memory system */
+  thread_start();
+  /* shutdown */
+  thread_ext();
+}
+```
+`thread_init()`'s main purpose is to create the first thread for the pintos. 
+One of the key feature of `thread_init()` is to set MAGIC value to running thread. 
+Detail of MAGIC value is explained at the top of `thread.h`. 
+MAGIC value is used to check whether the thread is valid or not. 
+Since `struct thread` should not grow too large, `struct thread`'s magic member will 
+work as validity checker whether the thread is valid or not.
+
+`thread_start` will `thread_create` `idle` thread and `sema_down` to prevent other process to join. 
+As soon as `idle thread` created, it will `sema_up` to release the last `sema_down` from `thread_create`.
+Then, block idle itself. This will allow `run_action` in `main()` to run other thread.
+This idle thread will wake up when there is no available thread to run.
+
+`thread_create` will create a new thread according to givven argument. The function get 
+a function name, priority and argument(`aux`). The function will allocate memory for
+page for `sturct thread` and stack frame for `kernal_thread`, and `switching`. 
+Initially, `init_thread` init thread in `THREAD_BLOCKED` state. Just before returning, 
+`thread_unblock()` is called and set the thread state to `THREAD_READY`.
+
+### Thread State
+![thread_state](img/p1_1_thread_state.svg)
+This is state diagram of thread life cycle. One exception is `THREAD_RUNNING` state,
+which can be initialized by `thread_init()` called by `main()` to set the first thread.
+
+`THREAD_READY`: thread is ready to run, but not running. Once a scheduler choose this thread,
+it will be the next thread to run. Managed in `ready_list` in `src/threads/thread.c`.
+
+`THREAD_RUNNING`: thread is running, only one thread can be in this state.
+
+`THREAD_BLOCKED`: thread is blocked, waiting for SOMETHING (lock to be released, semaphore to be up, etc). 
+
+`THREAD_DYING`: thread will be destroyed soon.
+
+
+Above life cycle is implemented in `src/threads/thread.c` as enum `thread_status`.
+This enum is stored in `status` member in `struct thread`.
+```c
+/* States in a thread's life cycle. */
+enum thread_status
+  {
+    THREAD_RUNNING,     /* Running thread. */
+    THREAD_READY,       /* Not running but ready to run. */
+    THREAD_BLOCKED,     /* Waiting for an event to trigger. */
+    THREAD_DYING        /* About to be destroyed. */
+  };
+```
+The key algorithm for thread life cycle is how to choose "order of which thread to run next". In other words, 
+how can OS manage a priority of thread in `ready_list`
+
+### Ready List
+
+
+
+## Thread Switching (`schedule()`)
+
+
+
+
+
+## Syncronization Primitives
+### Lock
+### Semaphore 
+### Condition Variable
+### Optimization barrier
+
+# Requirements
 
 ## Alarm Clock
 ### Overall structure
