추후 graph 수정을 위해 comment 추가
Took 20 seconds

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -77,6 +77,36 @@ Initially, `init_thread` init thread in `THREAD_BLOCKED` state. Just before retu
 `thread_unblock()` is called and set the thread state to `THREAD_READY`.
 
 ### Thread State
+<!-- 
+digraph finite_state_machine {
+    rankdir=TB;
+
+    node [shape = rectangle];
+    center [shape=none, width=0, height=0, label=""];  // Invisible center node
+
+    // Triangle arrangement
+    center -> THREAD_READY [style=invis];
+
+
+    // Initialization state
+    init [shape=point];   // This represents the small dot or circle
+    init -> THREAD_READY;
+
+    {rank=min; init THREAD_READY THREAD_RUNNING THREAD_DYING exit}
+    
+    init -> exit [style=invis]
+    exit [shape=point];
+    
+    THREAD_READY -> THREAD_RUNNING [label="schedule()", minlen=4]
+    THREAD_RUNNING -> THREAD_READY [label="thread_yield()"]
+    THREAD_RUNNING -> THREAD_DYING [label="thread_exit()"]
+    THREAD_RUNNING -> THREAD_BLOCKED [label="thread_block()"]
+    THREAD_BLOCKED -> THREAD_READY [taillabel="thread_unblock()\n\n"]
+
+    THREAD_DYING -> exit
+}
+-->
+
 ![thread_state](img/p1_1_thread_state.svg)
 This is state diagram of thread life cycle. One exception is `THREAD_RUNNING` state,
 which can be initialized by `thread_init()` called by `main()` to set the first thread.
