--- a/docs/p1.md
+++ b/docs/p1.md
@@ -121,7 +121,7 @@ it will be the next thread to run. Managed in `ready_list` in `src/threads/threa
 
 `THREAD_RUNNING`: thread is running, only one thread can be in this state.
 
-`THREAD_BLOCKED`: thread is blocked, waiting for SOMETHING (lock to be released, semaphore to be up, etc). 
+`THREAD_BLOCKED`: thread is blocked, waiting for SOMETHING (lock to be released, semaphore to be up, etc).
 
 `THREAD_DYING`: thread will be destroyed soon.
 
@@ -131,25 +131,134 @@ This enum is stored in `status` member in `struct thread`.
 ```c
 /* States in a thread's life cycle. */
 enum thread_status
-  {
-    THREAD_RUNNING,     /* Running thread. */
-    THREAD_READY,       /* Not running but ready to run. */
-    THREAD_BLOCKED,     /* Waiting for an event to trigger. */
-    THREAD_DYING        /* About to be destroyed. */
-  };
+{
+THREAD_RUNNING,     /* Running thread. */
+THREAD_READY,       /* Not running but ready to run. */
+THREAD_BLOCKED,     /* Waiting for an event to trigger. */
+THREAD_DYING        /* About to be destroyed. */
+};
 ```
-The key algorithm for thread life cycle is how to choose "order of which thread to run next". In other words, 
-how can OS manage a priority of thread in `ready_list`
 
-### Ready List
+The key algorithm for thread life cycle is how to choose "order of which thread to run next". In other words,
+how can OS manage a priority of thread in `ready_list`. Current implementation of `ready_list` is implemented is FIFO
+list that contains all the thread that is ready to run.
 
+## Thread Switching
 
+### `schedule()`
 
-## Thread Switching (`schedule()`)
+`schedule()` is responsible for choosing which thread to run next. This function is called by: `thread_block(),
+thread_exit(), thread_yield()`. Before calling `schedule()`, interrupt should be disabled by calling `intr_disable()`.
+If interrupt is not disabled, there is a chance that interrupt handler will be called while switching
+thread. `schedule()`
+will choose the next thread by calling `next_thread_to_run()` and switch from `cur` to `next` thread.
 
+`thread_schedule_tail()` will do the rest of the work. It will mark `cur` thread to `THREAD_RUNNING` state and start
+new time slice. If the thread that we just switched is from `THREAD_DYING`, we will free palloced memory
+including `struct thread` and `stack frame`. The reason for freeing memory after switching is we need information in
+this memory for `switch_threads()`. If we free memory before switching, we will not be able to get information
 
+### `switch_threads()`
 
+`switchs.S` contains assembly code for switching thread. `CUR` is the current running thread and `NEXT` is the
+thread we are switching to. `switch_threads()` will save the state of `CUR` and restore the state of `NEXT`. The code
+can be break down into a few parts.
 
+1. Save registers
+
+```asm
+pushl %ebx
+pushl %ebp
+pushl %esi
+pushl %edi
+```
+
+Registers `ebx`, `ebp`, `esi`, `edi` are callee saved registers. Thus, a called functio must preserve their value.
+
+2. Save current stack pointer
+
+```asm
+mov thread_stack_ofs, %edx # uint32_t thread_stack_ofs = offsetof (struct thread, stack); in thread.c
+movl SWITCH_CUR(%esp), %eax
+movl %esp, (%eax,%edx,1)
+```
+
+`thread_stack_ofs` is the offset of the `stack` member in the `struct thread`. `SWITCH_CUR` is the offset from
+the `struct switch_threads_frame` to the `cur` member. `cur` is the current running thread.
+`movl SWITCH_CUR(%esp), %eax` will result a pointer to the current running thread's `struct thread`. The last
+statement will save the current stack pointer to the `stack` member of the current running thread (%eax + %edx =
+%eax + thread_stack_ofs = %eax + offsetof (struct thread, stack) = &cur->stack).
+
+3. Restore next stack pointer
+
+```asm
+movl SWITCH_NEXT(%esp), %eax
+movl (%eax,%edx,1), %esp
+```
+
+Likely, `movl SWITCH_NEXT(%esp), %eax` will result a pointer to the next thread's `struct thread`.
+Adding `thread_stack_ofs` stored in `%edx` will result a pointer to the `stack` member of the next thread. The last
+statement will restore the stack pointer to the next thread's stack pointer (%eax + %edx = %eax + thread_stack_ofs =
+%eax + offsetof (struct thread, stack) = &next->stack).
+
+4. Restore registers
+
+```asm
+popl %edi
+popl %esi
+popl %ebp
+popl %ebx
+```
+
+5. Return
+
+```asm
+ret
+```
+
+### Special case: Running a thread for the first time
+
+Running a thread for the first time is a special case. The stack pointer of the thread is not initialized yet. Mentioned
+above, `switch_threads()` requires previos stack's information to properly switch to the next thread. However, the
+first thread does not have a previous stack. Thus, we need to initialize some fame stack frames in the first thread's
+stack. This is done in `thread_start()` in `src/threads/thread.c`.
+
+```c
+tid_t
+thread_create (const char *name, int priority,
+               thread_func *function, void *aux) 
+{
+  struct thread *t;
+  struct kernel_thread_frame *kf;
+  struct switch_entry_frame *ef;
+  struct switch_threads_frame *sf;
+```
+
+The topmost is `switch_threads_frame`. Its eip is set to point to `switch_entry()` defined in `switch.S`. This make
+the next function to call is `switch_entry()`
+
+The second is `switch_entry_frame`. Its role is to call `thread_schedule_tail()` for the first time. Detailed
+explanation
+follows.
+
+```asm
+# Implementation of switch_entry() in `switch.S`
+addl $8, %esp # discard switch_threads() arguments: cur and next
+pushl %eax # push SWITCH_CUR(%esp) to the stack, it will be the argument of thread_schedule_tail(), 
+           # SWITCH_CUR(%esp) is the pointer to CUR thread's struct thread
+call thread_schedule_tail 
+addl $4, %esp # clean up stack
+```
+
+`switch_entry` is a helper function for `switch_threads()`. It will discard argument to `switch_threads()` and
+call `thread_schedule_tail()`.
+
+The third is `kernel_thread_frame`. Its role is to call `function` with `aux` as argument. `kernel_thread()` will
+enable interrupt, call `function` with argument `aux`, and `thread_exit()`.
+
+To wrap up, the role of `kernel_thread_frame`, `switch_entry_frame`, and `switch_threads_frame` is to setup proper
+execution environment for the first thread. The first thread will call `thread_schedule_tail()` and switch to the next
+thread flawlessly.
 
 ## Syncronization Primitives
 
