--- a/docs/p1.md
+++ b/docs/p1.md
@@ -49,36 +49,33 @@ Team Number: 20
 
 ### Overview of Thread life cycle implementation in PintOS
 
-A current implementation of threads in pintos starts at `main()` in `src/threads/init.c`.
+The current implementation of threads in PintOS starts at `main()` in `src/threads/init.c`.
 
 ```c
-int main(void){
-  /* initizliation */
+int main(void) {
+  /* initialization */
   thread_init();
   /* Init memory system */
   thread_start();
   /* shutdown */
-  thread_ext();
+  thread_exit();
 }
 ```
 
-`thread_init()`'s main purpose is to create the first thread for the pintos.
-One of the key feature of `thread_init()` is to set MAGIC value to running thread.
-Detail of MAGIC value is explained at the top of `thread.h`.
-MAGIC value is used to check whether the thread is valid or not.
-Since `struct thread` should not grow too large, `struct thread`'s magic member will
-work as validity checker whether the thread is valid or not.
+`thread_init()`'s primary purpose is to create the first thread for PintOS. A key feature of `thread_init()` is to set
+the MAGIC value to the running thread. Details of the MAGIC value are explained at the top of `thread.h`. The MAGIC
+value is used to check whether the thread is valid or not. Since `struct thread` should not grow too large, its magic
+member will work as a validity checker.
 
-`thread_start` will `thread_create` `idle` thread and `sema_down` to prevent other process to join.
-As soon as `idle thread` created, it will `sema_up` to release the last `sema_down` from `thread_create`.
-Then, block idle itself. This will allow `run_action` in `main()` to run other thread.
-This idle thread will wake up when there is no available thread to run.
+`thread_start` will create an `idle` thread (with `thread_create`) and use `sema_down` to prevent other processes from
+joining. Once the `idle thread` is created, it will `sema_up` to release the last `sema_down` from `thread_create`.
+Then, it blocks itself, allowing the `run_action` in `main()` to run another thread. The idle thread will wake up when
+there are no available threads to run.
 
-`thread_create` will create a new thread according to givven argument. The function get
-a function name, priority and argument(`aux`). The function will allocate memory for
-page for `sturct thread` and stack frame for `kernal_thread`, and `switching`.
-Initially, `init_thread` init thread in `THREAD_BLOCKED` state. Just before returning,
-`thread_unblock()` is called and set the thread state to `THREAD_READY`.
+`thread_create` will create a new thread based on the given argument. The function receives a function name, priority,
+and an argument (`aux`). This function will allocate memory for a page for `struct thread` and stack frames
+for `kernel_thread` and switching. Initially, `init_thread` initializes a thread in the `THREAD_BLOCKED` state. Just
+before returning, `thread_unblock()` is called, setting the thread state to `THREAD_READY`.
 
 ### Thread State
 
@@ -113,58 +110,59 @@ digraph finite_state_machine {
 -->
 
 ![thread_state](img/p1_1_thread_state.svg)
-This is state diagram of thread life cycle. One exception is `THREAD_RUNNING` state,
-which can be initialized by `thread_init()` called by `main()` to set the first thread.
 
-`THREAD_READY`: thread is ready to run, but not running. Once a scheduler choose this thread,
-it will be the next thread to run. Managed in `ready_list` in `src/threads/thread.c`.
+The state diagram of the thread life cycle has one exception: the `THREAD_RUNNING` state can be initialized
+by `thread_init()`, called by `main()` to set the first thread.
 
-`THREAD_RUNNING`: thread is running, only one thread can be in this state.
+- `THREAD_READY`: The thread is ready to run but isn't running. Once the scheduler selects this thread, it will run
+  next. Managed in `ready_list` in `src/threads/thread.c`.
 
-`THREAD_BLOCKED`: thread is blocked, waiting for SOMETHING (lock to be released, semaphore to be up, etc).
+- `THREAD_RUNNING`: The thread is currently running, and only one thread can be in this state.
 
-`THREAD_DYING`: thread will be destroyed soon.
+- `THREAD_BLOCKED`: The thread is blocked, waiting for an event such as a lock release or a semaphore to be upped.
 
-Above life cycle is implemented in `src/threads/thread.c` as enum `thread_status`.
-This enum is stored in `status` member in `struct thread`.
+- `THREAD_DYING`: The thread will be destroyed soon.
+
+This life cycle is defined in `src/threads/thread.c` as the enum `thread_status`. This enum is stored in the `status`
+member of `struct thread`.
 
 ```c
 /* States in a thread's life cycle. */
-enum thread_status
-{
-THREAD_RUNNING,     /* Running thread. */
-THREAD_READY,       /* Not running but ready to run. */
-THREAD_BLOCKED,     /* Waiting for an event to trigger. */
-THREAD_DYING        /* About to be destroyed. */
+enum thread_status {
+  THREAD_RUNNING,     /* Running thread. */
+  THREAD_READY,       /* Not running but ready to run. */
+  THREAD_BLOCKED,     /* Waiting for an event to trigger. */
+  THREAD_DYING        /* About to be destroyed. */
 };
 ```
 
-The key algorithm for thread life cycle is how to choose "order of which thread to run next". In other words,
-how can OS manage a priority of thread in `ready_list`. Current implementation of `ready_list` is implemented is FIFO
-list that contains all the thread that is ready to run.
+A key aspect of the thread life cycle is determining the order in which threads run next or how the OS manages the
+priority of threads in the `ready_list`. The current implementation of `ready_list` is as a FIFO list containing all
+threads ready to run.
 
 ## Thread Switching
 
 ### `schedule()`
 
-`schedule()` is responsible for choosing which thread to run next. This function is called by: `thread_block(),
-thread_exit(), thread_yield()`. Before calling `schedule()`, interrupt should be disabled by calling `intr_disable()`.
-If interrupt is not disabled, there is a chance that interrupt handler will be called while switching
-thread. `schedule()`
-will choose the next thread by calling `next_thread_to_run()` and switch from `cur` to `next` thread.
+`schedule()` is responsible for deciding which thread runs next. This function is invoked
+by: `thread_block()`, `thread_exit()`, and `thread_yield()`. Before calling `schedule()`, interrupts should be disabled
+by using `intr_disable()`. If interrupts are not disabled, an interrupt handler might be called during thread
+switching. `schedule()` chooses the next thread by invoking `next_thread_to_run()` and switches from the current to the
+next thread.
 
-`thread_schedule_tail()` will do the rest of the work. It will mark `cur` thread to `THREAD_RUNNING` state and start
-new time slice. If the thread that we just switched is from `THREAD_DYING`, we will free palloced memory
-including `struct thread` and `stack frame`. The reason for freeing memory after switching is we need information in
-this memory for `switch_threads()`. If we free memory before switching, we will not be able to get information
+`thread_schedule_tail()` completes the switching process. It sets the current thread to the `THREAD_RUNNING` state and
+starts a new time slice. If the thread being switched from is in the `THREAD_DYING` state, we free the allocated memory,
+which includes `struct thread` and the `stack frame`. We free the memory after switching because we need the information
+in this memory for `switch_threads()`. Freeing the memory before switching would prevent access to this necessary
+information.
 
 ### `switch_threads()`
 
-`switchs.S` contains assembly code for switching thread. `CUR` is the current running thread and `NEXT` is the
-thread we are switching to. `switch_threads()` will save the state of `CUR` and restore the state of `NEXT`. The code
-can be break down into a few parts.
+Within `switchs.S`, we find the assembly code responsible for thread switching. The `CUR` thread is the one currently
+executing, while the `NEXT` thread is the one we'll be switching to. The purpose of `switch_threads()` is to save the
+state of `CUR` and restore the state of `NEXT`. Let's break down the process:
 
-1. Save registers
+1. **Save Registers**
 
 ```asm
 pushl %ebx
@@ -173,35 +171,34 @@ pushl %esi
 pushl %edi
 ```
 
-Registers `ebx`, `ebp`, `esi`, `edi` are callee saved registers. Thus, a called functio must preserve their value.
+The registers `ebx`, `ebp`, `esi`, and `edi` are callee-saved registers. It's imperative that a called function
+preserves their values.
 
-2. Save current stack pointer
+2. **Save Current Stack Pointer**
 
 ```asm
-mov thread_stack_ofs, %edx # uint32_t thread_stack_ofs = offsetof (struct thread, stack); in thread.c
+mov thread_stack_ofs, %edx # uint32_t thread_stack_ofs = offsetof(struct thread, stack); from thread.c
 movl SWITCH_CUR(%esp), %eax
 movl %esp, (%eax,%edx,1)
 ```
 
-`thread_stack_ofs` is the offset of the `stack` member in the `struct thread`. `SWITCH_CUR` is the offset from
-the `struct switch_threads_frame` to the `cur` member. `cur` is the current running thread.
-`movl SWITCH_CUR(%esp), %eax` will result a pointer to the current running thread's `struct thread`. The last
-statement will save the current stack pointer to the `stack` member of the current running thread (%eax + %edx =
-%eax + thread_stack_ofs = %eax + offsetof (struct thread, stack) = &cur->stack).
+The `thread_stack_ofs` represents the offset of the `stack` member in the `struct thread`. `SWITCH_CUR` is the offset
+from the `struct switch_threads_frame` to the `cur` member. The operation `movl SWITCH_CUR(%esp), %eax` yields a pointer
+to the current thread's `struct thread`. The last line here saves the current stack pointer to the `stack` member of the
+current thread.
 
-3. Restore next stack pointer
+3. **Restore Next Stack Pointer**
 
 ```asm
 movl SWITCH_NEXT(%esp), %eax
 movl (%eax,%edx,1), %esp
 ```
 
-Likely, `movl SWITCH_NEXT(%esp), %eax` will result a pointer to the next thread's `struct thread`.
-Adding `thread_stack_ofs` stored in `%edx` will result a pointer to the `stack` member of the next thread. The last
-statement will restore the stack pointer to the next thread's stack pointer (%eax + %edx = %eax + thread_stack_ofs =
-%eax + offsetof (struct thread, stack) = &next->stack).
+Similarly, `movl SWITCH_NEXT(%esp), %eax` results in a pointer to the next thread's `struct thread`.
+Adding `thread_stack_ofs`, now stored in `%edx`, yields a pointer to the `stack` member of the next thread. The final
+line restores the stack pointer of the next thread.
 
-4. Restore registers
+4. **Restore Registers**
 
 ```asm
 popl %edi
@@ -210,23 +207,23 @@ popl %ebp
 popl %ebx
 ```
 
-5. Return
+5. **Return to Caller**
 
 ```asm
 ret
 ```
 
-### Special case: Running a thread for the first time
+### Special Case: Starting a Thread for the First Time
 
-Running a thread for the first time is a special case. The stack pointer of the thread is not initialized yet. Mentioned
-above, `switch_threads()` requires previos stack's information to properly switch to the next thread. However, the
-first thread does not have a previous stack. Thus, we need to initialize some fame stack frames in the first thread's
-stack. This is done in `thread_start()` in `src/threads/thread.c`.
+The initialization of a thread poses a unique challenge. Specifically, the stack pointer for the thread hasn't been set
+yet. As noted, `switch_threads()` requires information about the previous stack to switch to the next thread correctly.
+However, an initial thread lacks this prior stack. Thus, it becomes necessary to initialize certain stack frames for the
+first thread. This initialization is performed in `thread_start()`, found in `src/threads/thread.c`.
 
 ```c
 tid_t
-thread_create (const char *name, int priority,
-               thread_func *function, void *aux) 
+thread_create(const char *name, int priority,
+              thread_func *function, void *aux)
 {
   struct thread *t;
   struct kernel_thread_frame *kf;
@@ -234,31 +231,30 @@ thread_create (const char *name, int priority,
   struct switch_threads_frame *sf;
 ```
 
-The topmost is `switch_threads_frame`. Its eip is set to point to `switch_entry()` defined in `switch.S`. This make
-the next function to call is `switch_entry()`
+At the top is the `switch_threads_frame`. Its `eip` points to `switch_entry()`, as defined in `switch.S`. This means
+that the next function to be called will be `switch_entry()`.
 
-The second is `switch_entry_frame`. Its role is to call `thread_schedule_tail()` for the first time. Detailed
-explanation
-follows.
+The subsequent frame is `switch_entry_frame`, whose task is to invoke `thread_schedule_tail()` for the first time. A
+more detailed description follows:
 
 ```asm
 # Implementation of switch_entry() in `switch.S`
 addl $8, %esp # discard switch_threads() arguments: cur and next
-pushl %eax # push SWITCH_CUR(%esp) to the stack, it will be the argument of thread_schedule_tail(), 
-           # SWITCH_CUR(%esp) is the pointer to CUR thread's struct thread
+pushl %eax    # push SWITCH_CUR(%esp) to the stack, which will be the argument for thread_schedule_tail()
+              # SWITCH_CUR(%esp) points to the current thread's struct thread
 call thread_schedule_tail 
 addl $4, %esp # clean up stack
 ```
 
-`switch_entry` is a helper function for `switch_threads()`. It will discard argument to `switch_threads()` and
-call `thread_schedule_tail()`.
+The `switch_entry` function aids `switch_threads()`. Its main job is to discard the arguments to `switch_threads()` and
+then call `thread_schedule_tail()`.
 
-The third is `kernel_thread_frame`. Its role is to call `function` with `aux` as argument. `kernel_thread()` will
-enable interrupt, call `function` with argument `aux`, and `thread_exit()`.
+Lastly, we have `kernel_thread_frame`, which calls `function` with `aux` as its argument. Within `kernel_thread()`,
+interrupts are enabled, `function` is called with the argument `aux`, and finally, `thread_exit()` is invoked.
 
-To wrap up, the role of `kernel_thread_frame`, `switch_entry_frame`, and `switch_threads_frame` is to setup proper
-execution environment for the first thread. The first thread will call `thread_schedule_tail()` and switch to the next
-thread flawlessly.
+In summary, the roles of `kernel_thread_frame`, `switch_entry_frame`, and `switch_threads_frame` are to establish the
+correct execution environment for the first thread. This setup ensures that the initial thread can seamlessly
+invoke `thread_schedule_tail()` and switch to the next thread.
 
 ## Syncronization Primitives
 
