--- a/docs/p1.md
+++ b/docs/p1.md
@@ -9,39 +9,40 @@ Team Number: 20
 김치헌(20190807)
 
 ## Table of Contents
-
 - [Project 1: Threads](#project-1--threads)
-    * [Preliminaries](#preliminaries)
+  * [Preliminaries](#preliminaries)
 - [Analysis of the current implementation](#analysis-of-the-current-implementation)
-    * [Threads](#threads)
-        + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
-        + [Thread State](#thread-state)
-            - [Ready List](#ready-list)
-    * [Scheduling](#scheduling)
-    * [Syncronization Primitives](#syncronization-primitives)
-        + [Lock](#lock)
-        + [Semaphore](#semaphore)
-        + [Condition Variable](#condition-variable)
-        + [Optimization barrier](#optimization-barrier)
+  * [Threads](#threads)
+    + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
+    + [Thread State](#thread-state)
+  * [Thread Switching](#thread-switching)
+    + [`schedule()`](#-schedule---)
+    + [`switch_threads()`](#-switch-threads---)
+    + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
+  * [Syncronization Primitives](#syncronization-primitives)
+    + [Lock](#lock)
+    + [Semaphore](#semaphore)
+    + [Condition Variable](#condition-variable)
+    + [Optimization barrier](#optimization-barrier)
 - [Requirements](#requirements)
-    * [Alarm Clock](#alarm-clock)
-        + [Overall structure](#overall-structure)
-        + [Data Structures](#data-structures)
-        + [Algorithms](#algorithms)
-        + [Implementation](#implementation)
-        + [Rationale](#rationale)
-    * [Priority Scheduling](#priority-scheduling)
-        + [Overall structure](#overall-structure-1)
-        + [Data Structures](#data-structures-1)
-        + [Algorithms](#algorithms-1)
-        + [Implementation](#implementation-1)
-        + [Rationale](#rationale-1)
-    * [Advanced Scheduler](#advanced-scheduler)
-        + [Overall structure](#overall-structure-2)
-        + [Data Structures](#data-structures-2)
-        + [Algorithms](#algorithms-2)
-        + [Implementation](#implementation-2)
-        + [Rationale](#rationale-2)
+  * [Alarm Clock](#alarm-clock)
+    + [Overall structure](#overall-structure)
+    + [Data Structures](#data-structures)
+    + [Algorithms](#algorithms)
+    + [Implementation](#implementation)
+    + [Rationale](#rationale)
+  * [Priority Scheduling](#priority-scheduling)
+    + [Overall structure](#overall-structure-1)
+    + [Data Structures](#data-structures-1)
+    + [Algorithms](#algorithms-1)
+    + [Implementation](#implementation-1)
+    + [Rationale](#rationale-1)
+  * [Advanced Scheduler](#advanced-scheduler)
+    + [Overall structure](#overall-structure-2)
+    + [Data Structures](#data-structures-2)
+    + [Algorithms](#algorithms-2)
+    + [Implementation](#implementation-2)
+    + [Rationale](#rationale-2)
 
 # Analysis of the current implementation
 
