semaphore 현재 구현 분석 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -270,6 +270,50 @@ invoke `thread_schedule_tail()` and switch to the next thread.
 ## Syncronization Primitives
 
 ### Semaphore
+A semaphore is a type of synchronization that is invented to control access to a common resource shared by multiple threads.
+
+The semaphore S is a variable that holds a integer value, and this value can be accessed and edited by only two operators denoted P and V.
+
+The integer value holds by the semaphore is the number of the units that are currently available.
+
+P is called before a thread is trying to access the critical section(common resource that should not be accessed by two or more threads).
+If the semaphore value is over 1, decrement the value and enter the critical section.
+If not, the thread waits until the value be positive, then enter the critical section, decrementing the value.
+
+V is called after a thread complete the operation in the critical section.
+V simply increments the semaphore value.
+
+In pintos, `semaphore` is implemented as a structure.
+```c++
+struct semaphore
+  {
+    unsigned value;         /* Current value. */
+    struct list waiters;    /* List of waiting threads */
+  };
+```
+A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_down()` is implemented.
+
+- `sema_init()`: Set an initial value for the variable `value` and initiate a list `waiters`.
+- `sema_down()`: P. If `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and blocked by `thread_block()`.
+  when the `value` became positive, the caller thread decrement the `value` and return to access the critical section.
+- `sema_up()` : V. If `waiters` is not empty (i.e. there are threads that want to access the critical section), the front thread is popped by `list_pop_front()`.
+  Then the popped thread take access to critical section. Regardless of `waiters`, `sema_ip()` increments the `value`.
+
+In genenral, according to the definition of the semaphore, the value of the semaphore should be initialized to a positive number depending on the number of resources available.
+However, we can find that pintos initialize the value with zero and then call `sema_down()`.
+In this case, the caller (i.e. the thread which initialized the semaphore and called `sema_down()`) immediately pushed into `waiters` and then blocked.
+As the caller whose state was running is blocked, another thread in the ready list is selected and become the next running thread.
+The selected running thread do its work and then call `sema_up()` to make the previous running thread become the current running thread again.
+A typical example is the initializing step of the `idle` thread. The `main` thread initialize the semaphore `idle_started` with `value` 0 and call `sema_down` to pass the control flow to `idle` thread.
+After the function `idle()` is started, `idle` thread call `sema_up()` to give the control flow back to the `main` thread.
+
+There are other functions for `semaphore` in pintos, `sema_try_down()` and `sema_self_test()`.
+
+`sema_try_down()` is similar to `sema_down()` as it is a kind of P function. But it works only when the `value` is positive.
+In other words, if the `value` is 0, it returns `false` and the caller neither enter the `waiters` nor becomes blocked.
+If the `value` is positive, it decreases the `value` by 1 and return `true`.
+
+`sema_self_test()` is a function for self testing.
 
 ### Lock
 
