영혼을 깎은 그림 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -78,6 +78,11 @@ and an argument (`aux`). This function will allocate memory for a page for `stru
 for `kernel_thread` and switching. Initially, `init_thread` initializes a thread in the `THREAD_BLOCKED` state. Just
 before returning, `thread_unblock()` is called, setting the thread state to `THREAD_READY`.
 
+### Thread Memory Layout
+<p align="center">
+  <img src="img/p1_1_thread_memory_layout.png" alt="thread_memory_layout"  />
+</p>
+
 ### Thread State
 
 <!-- 
@@ -109,8 +114,9 @@ digraph finite_state_machine {
     THREAD_DYING -> exit
 }
 -->
-
-![thread_state](img/p1_1_thread_state.svg)
+<p align="center">
+  <img src="img/p1_1_thread_state.svg" alt="thread_state"  />
+</p>
 
 The state diagram of the thread life cycle has one exception: the `THREAD_RUNNING` state can be initialized
 by `thread_init()`, called by `main()` to set the first thread.
@@ -142,6 +148,10 @@ priority of threads in the `ready_list`. The current implementation of `ready_li
 threads ready to run.
 
 ## Thread Switching
+### Overview
+<p align="center">
+  <img src="img/p1_3_thread_switch.drawio.png" alt="thread_switching"  />
+</p>
 
 ### `schedule()`
 
