lock 현재 구현 분석 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -316,6 +316,39 @@ If the `value` is positive, it decreases the `value` by 1 and return `true`.
 `sema_self_test()` is a function for self testing.
 
 ### Lock
+A Lock is a synchronization primitives. It is used for controlling access to a common resource like semaphore.
+The semaphore's P(or "down") is "acquire" in the lock and the V (or "up") of the semaphore is "release" in the lock.
+
+There are two main difference between a lock and a semaphore.
+
+- One is the range of the value can have.
+A Semaphore can have various values bigger than 1, but the value of a lock only can be 0 or 1.
+In other words, a lock is a kind of binary semaphores.
+
+- Another is the presence of the lock holder.
+In semaphore, there is no owner or holder. It means a thread can "up" the semaphore without being the thread "downed" it.
+In contrast, a lock can only be "released" by the thread that "acquired" it.
+
+In pintos, a lock is implemented by a structure.
+```c++
+struct lock
+  {
+    struct thread *holder;          /* Thread holding lock */
+    struct semaphore semaphore;     /* Binary semaphore controlling access */
+  };
+```
+As a lock perform like a binary semaphore, it has a `semaphore` as member variable, and `holder` for the thread holding the lock.
+
+A lock is initialized by `lock_init()`. There are 4 functions to implement the lock features.
+
+- `lock_init()`: Initialize `holder` and `semaphore`. There is no holder at the beginning so initialize `holder` with `NULL`.
+And as the lock is the binary semaphore, `semaphore` is initialized with the value 1.
+- `lock_acquire()`: Checks whether the `holder` is the caller(it must not), and then invoke `sema_down()`. Then set the `holder` the current thread.
+- `lock_release()`: Checks whether the `holder` is the caller(it must be), and then set the `holder` NULL. Then invoke `sema_up()`.
+- `lock_try_acquire()`: Lock version of `sema_try_down()`. Acquire the lock only when the lock is acquired by another thread.
+- `lock_held_by_current_thread()`: `lock_acquire()` and `lock_release()` use this function to check the `holder`.
+It returns `true` if the `holder` is the current thread. Otherwise, it returns `false`. 
+
 
 ### Condition Variable
 
