thread memory layout 그림 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -8,41 +8,44 @@ Team Number: 20
 
 김치헌(20190807)
 
+*We use GPT-4 to revise grammar errors in this report.*
+
 ## Table of Contents
+
 - [Project 1: Threads](#project-1--threads)
-  * [Preliminaries](#preliminaries)
+    * [Preliminaries](#preliminaries)
 - [Analysis of the current implementation](#analysis-of-the-current-implementation)
-  * [Threads](#threads)
-    + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
-    + [Thread State](#thread-state)
-  * [Thread Switching](#thread-switching)
-    + [`schedule()`](#-schedule---)
-    + [`switch_threads()`](#-switch-threads---)
-    + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
-  * [Syncronization Primitives](#syncronization-primitives)
-    + [Lock](#lock)
-    + [Semaphore](#semaphore)
-    + [Condition Variable](#condition-variable)
-    + [Optimization barrier](#optimization-barrier)
+    * [Threads](#threads)
+        + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
+        + [Thread State](#thread-state)
+    * [Thread Switching](#thread-switching)
+        + [`schedule()`](#-schedule---)
+        + [`switch_threads()`](#-switch-threads---)
+        + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
+    * [Syncronization Primitives](#syncronization-primitives)
+        + [Lock](#lock)
+        + [Semaphore](#semaphore)
+        + [Condition Variable](#condition-variable)
+        + [Optimization barrier](#optimization-barrier)
 - [Requirements](#requirements)
-  * [Alarm Clock](#alarm-clock)
-    + [Overall structure](#overall-structure)
-    + [Data Structures](#data-structures)
-    + [Algorithms](#algorithms)
-    + [Implementation](#implementation)
-    + [Rationale](#rationale)
-  * [Priority Scheduling](#priority-scheduling)
-    + [Overall structure](#overall-structure-1)
-    + [Data Structures](#data-structures-1)
-    + [Algorithms](#algorithms-1)
-    + [Implementation](#implementation-1)
-    + [Rationale](#rationale-1)
-  * [Advanced Scheduler](#advanced-scheduler)
-    + [Overall structure](#overall-structure-2)
-    + [Data Structures](#data-structures-2)
-    + [Algorithms](#algorithms-2)
-    + [Implementation](#implementation-2)
-    + [Rationale](#rationale-2)
+    * [Alarm Clock](#alarm-clock)
+        + [Overall structure](#overall-structure)
+        + [Data Structures](#data-structures)
+        + [Algorithms](#algorithms)
+        + [Implementation](#implementation)
+        + [Rationale](#rationale)
+    * [Priority Scheduling](#priority-scheduling)
+        + [Overall structure](#overall-structure-1)
+        + [Data Structures](#data-structures-1)
+        + [Algorithms](#algorithms-1)
+        + [Implementation](#implementation-1)
+        + [Rationale](#rationale-1)
+    * [Advanced Scheduler](#advanced-scheduler)
+        + [Overall structure](#overall-structure-2)
+        + [Data Structures](#data-structures-2)
+        + [Algorithms](#algorithms-2)
+        + [Implementation](#implementation-2)
+        + [Rationale](#rationale-2)
 
 # Analysis of the current implementation
 
@@ -79,9 +82,18 @@ for `kernel_thread` and switching. Initially, `init_thread` initializes a thread
 before returning, `thread_unblock()` is called, setting the thread state to `THREAD_READY`.
 
 ### Thread Memory Layout
+
+Suppose `thread_create()` is called with argument `"alarm_single"`. Then, the memory layout of the thread will be as
+follows:
+
 <p align="center">
   <img src="img/p1_1_thread_memory_layout.png" alt="thread_memory_layout"  />
 </p>
+
+`struct thread` locate at the very bottom of the page, the stack frame for `kernel_thread` is located on the top of the
+page, and stack frame of called functions grow downward. If stack frame grows too large, it will overlap with
+the `struct
+thread`. Resulting in a memory corruption, which can be identified by checking the MAGIC value.
 
 ### Thread State
 
@@ -148,10 +160,19 @@ priority of threads in the `ready_list`. The current implementation of `ready_li
 threads ready to run.
 
 ## Thread Switching
+
 ### Overview
+
 <p align="center">
   <img src="img/p1_3_thread_switch.drawio.png" alt="thread_switching"  />
 </p>
+
+The above diagram shows the process of thread switching. The current thread is in the `THREAD_RUNNING` state. If a
+thread
+has used up its timeslice, `thread_tick()` (called by `timer_interrupt`) will call the
+function `intr_yield_on_return()`. `intr_yield_on_return()` change `yield_on_return` flag to `true` and let 
+`intr_handler` know. Then, `intr_handler` will call `thread_yield()` to switch to the next thread. `thread_yield()` will
+call `schedule()` and `switch_threads()` to switch to the next thread during interrupt.
 
 ### `schedule()`
 
