--- a/docs/p1.md
+++ b/docs/p1.md
@@ -379,7 +379,7 @@ It returns `true` if the `holder` is the current thread. Otherwise, it returns `
 
 ## Alarm Clock
 
-### Overall structure
+### Overview of Current Implementation
 
 ### Data Structures
 
@@ -391,7 +391,7 @@ It returns `true` if the `holder` is the current thread. Otherwise, it returns `
 
 ## Priority Scheduling
 
-### Overall structure
+### Overview of Current Implementation
 
 ### Data Structures
 
@@ -403,7 +403,7 @@ It returns `true` if the `holder` is the current thread. Otherwise, it returns `
 
 ## Advanced Scheduler
 
-### Overall structure
+### Overview of Current Implementation
 
 ### Data Structures
 
