condition variable 현재 구현 분석 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -373,6 +373,54 @@ It returns `true` if the `holder` is the current thread. Otherwise, it returns `
 
 ### Condition Variable
 
+A condition variable is a synchronization primitive designed to solve a synchronization problem.
+A semaphore and a lock can handle the concurrency problem by limiting the number of threads to access the critical area.
+But they don't deal with how to control the order in the interdependent threads.
+Condition variable defines how the dependent thread give the control flow to the responsible thread and take it back.
+
+If a thread(Thread A) want to access the common resource after the another thread(Thread B) work on that common value, it uses condition variable.
+Here is the brief explanation of how condition variable works using a lock and a semaphore.
+
+- First, the Thread A needs to lock the common resource and acquire to prevent other threads to access.
+- Then it prepares a semaphore with initial value 0 to block itself until the common resource ready.
+- After preparing the semaphore, it releases the lock so that the Thread B can access and blocks itself using the prepared semaphore.
+- The Thread B acquires the lock and does the work needed on the common resource.
+- When the job done, it sends a signal to the blocked thread, Thread A, which is the V operation of the semaphore.
+- Finally, it can release the lock for Thread A.
+
+In pintos, a condition variable is implemented by a struct with a single variable.
+```c++
+struct condition
+  {
+    struct list waiters;    /* List of waiting threads */
+  };
+```
+
+The list `waiters` holds the elements of the struct `semaphore_elem`. 
+`semaphore_elem` is defined like below.
+
+```c++
+struct semaphore_elem
+  {
+    struct list_elem elem;          /* List element */
+    struct semaphore semaphore;     /* This semaphore. */
+  };
+```
+
+`condition` is initialized by `cond_init()` and performs its functionality with three functions, `cond_wait()`, `cond_signal()` and `cond_broadcast()`.
+
+- `cond_init()`: Simply initialize the list `waiters`.
+- `cond_wait()`: Receives a `lock` as an argument and has a local variable `semaphore_elem` `waiter`.
+This `lock` is the lock already acquired by the caller.
+After calling `cond_wait()`, the `waiter` semaphore initialized with the `value` 0 and `list_push_back()`ed into `waiters`. 
+Then the `lock` released and the `waiter` semaphore downed to make the thread wait for "signal".
+As the `lock` released, it can be acquired by other threads. The thread which acquire the `lock` will send the signal to the waiting thread.
+The "signal" will make the semaphore up, and after receiving the signal, the thread re-acquire the lock.
+- `cond_signal()`: Called by the current thread which acquires the lock released in `cond_wait()`.
+Simply makes the first waiting semaphore up (i.e. make the waiting thread be in the ready state).
+After calling `cond_signal()`, the caller can release the lock.
+- `cond_broadcast()`: If there is more than one `waiter` in the `waiters`, the caller can send signals to every `waiter` in `waiters` using this function.
+
 ### Optimization barrier
 
 # Requirements
